--- a/equacao.htm
+++ b/equacao.htm
@@ -255,7 +255,7 @@
           }
 
           try {
-              const response = await fetch("http://localhost:8000/api/equacao-reta-grafico", {
+              const response = await fetch("/api/equacao-reta-grafico", {
                   method: "POST",
                   headers: { "Content-Type": "application/json" },
                   body: JSON.stringify({ x1, y1, x2, y2 })
