Determina as rotas dos botoes voltar corretamente

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
       <h1>Calculadora Financeira</h1>
       
       <div class="nav-menu">
-        <a href="jurosCompostos.html" class="nav-item">Juros Compostos</a>
-        <a href="ipca.html" class="nav-item">Aportes</a>
-        <a href="irrf.html" class="nav-item">IRRF</a>
-        <a href="inss.html" class="nav-item">INSS</a>
-        <a href="equacao.htm" class="nav-item">Equação da Reta</a>
+        <a href="/jurosCompostos.html" class="nav-item">Juros Compostos</a>
+        <a href="/ipca.html" class="nav-item">Aportes</a>
+        <a href="/irrf.html" class="nav-item">IRRF</a>
+        <a href="/inss.html" class="nav-item">INSS</a>
+        <a href="/equacao.htm" class="nav-item">Equação da Reta</a>
       </div>
       
       <h2>Bem-vindo à Calculadora Financeira</h2>
