--- a/ipca.html
+++ b/ipca.html
@@ -178,7 +178,7 @@
             <h2>Juros Compostos com Aportes Mensais</h2>
             
             <div style="text-align: right; margin-bottom: 20px;">
-                <a href="index.html" style="text-decoration: none; color: var(--secondary-color); font-weight: 500;">← Voltar ao menu</a>
+                <a href="/" style="text-decoration: none; color: var(--secondary-color); font-weight: 500;">← Voltar ao menu</a>
             </div>
             
             <div class="input-group">
