--- a/equacao.htm
+++ b/equacao.htm
@@ -185,7 +185,7 @@
             <h1>Gerador de Gráfico de Reta</h1>
             
             <div style="text-align: right; margin-bottom: 20px;">
-                <a href="index.html" style="text-decoration: none; color: var(--secondary-color); font-weight: 500;">← Voltar ao menu</a>
+                <a href="/" style="text-decoration: none; color: var(--secondary-color); font-weight: 500;">← Voltar ao menu</a>
             </div>
             
             <div class="input-group">
